# app-qt

./: .gitignore  CMakeLists.txt  README.md  app-qt.code-workspace  httpd.conf
public/process/: process.cpp  process.h
src/: main.cpp  resources.qrc
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/items/: GridObject.cpp  GridObject.h  keyboardMouseHandler.cpp  keyboardMouseHandler.h  openglWindow.cpp  openglWindow.h  sceneView.cpp  sceneView.h  shaderProgram.cpp  shaderProgram.h
src/ui/widgets/: glWidget.cpp  glWidget.h  wavefromWidget.cpp  wavefromWidget.h  wavefromWidget.ui
web/: _vdir.bat  bnoiseRegs.php  bspRegs.php  build.bat  channelRegs.php  config.php  core.php  defines.php  deltaRegs.php  error.php  hostRegs.php  iapRegs.php  index.php  lwipRegs.php  msysTop.php  pcldRegs.php  rpcRegs.php  version.bat  version.php  version.tmpl  webui.code-workspace
web/c/: base.php  main.php  prop.php  rpc.php  status.php  tools.php
web/m/: config_m.php  regmap_m.php  rpc_m.php  session_m.php  utils_m.php
web/r/: default.css  index.php  utils.js
web/r/3js/: main.js
web/r/css/: bootstrap-responsive.css  bootstrap-responsive.min.css  bootstrap-select.css  glyphicon.css  material-dashboard.css  normalize.min.css  toggle.css
web/r/js/: bootstrap-spinedit.js  bootstrap-table-export.js  bootstrap-table.js  echarts.js
web/u/: utils.php
web/v/: 404.php
web/v/3d/: v_cloud.php
web/v/frame/: dlg_user_switch.php  t_footer.php  t_header.php  template.php
web/v/prop/: v_bsp.php  v_channels.php  v_debug.php  v_fpga.php  v_header.php  v_host.php  v_tail.php
web/v/status/: v_dashboard.php  v_header.php  v_network.php  v_status.php  v_tail.php  v_temp.php  v_voltage.php
web/v/system/: v_header.php  v_regs.php  v_tail.php
web/v/tools/: dlg_upload_f2r.php  dlg_upload_fw.php  dlg_upload_iap.php  dlg_upload_laserId.php  dlg_upload_pattern.php  v_algorithm.php  v_header.php  v_iap.php  v_laserId.php  v_motor.php  v_noise_chart.php  v_noise_ctrl.php  v_noise_list.php  v_noise_shift.php  v_pcldFmlb.php  v_pcldLark16.php  v_pcldLark32.php  v_slider.php  v_tail.php
